fix readme link

--- a/README.Rmd
+++ b/README.Rmd
@@ -80,4 +80,4 @@ crs_epsg(sfx)
 
 ## Code of Conduct
 
-Please note that the crsmeta project is released with a [Contributor Code of Conduct](https://contributor-covenant.org/version/1/0/0/CODE_OF_CONDUCT.html). By contributing to this project, you agree to abide by its terms.
+Please note that the crsmeta project is released with a [Contributor Code of Conduct](https://github.com/hypertidy/crsmeta/blob/master/CODE_OF_CONDUCT.md). By contributing to this project, you agree to abide by its terms.
