--- a/README.Rmd
+++ b/README.Rmd
@@ -77,12 +77,12 @@ R and other software in use:
 ```{r sf}
 print(packageVersion("sf"))
 print(sf::sf_extSoftVersion())
-sfx <- sf::read_sf(system.file("gpkg/nc.gpkg", package = "sf", mustWork = TRUE))
-crs_proj(sfx)
-crs_proj(as(sfx, "Spatial"))
-crs_wkt2(as(sfx, "Spatial"))
-crs_epsg(sfx)
-crs_input(sfx)
+north_carolina <- sf::read_sf(system.file("gpkg/nc.gpkg", package = "sf", mustWork = TRUE))
+crs_proj(north_carolina)
+crs_proj(as(north_carolina, "Spatial"))
+crs_wkt2(as(north_carolina, "Spatial"))
+crs_epsg(north_carolina)
+crs_input(north_carolina)
 ```
 
 ## Code of Conduct
