--- a/README.Rmd
+++ b/README.Rmd
@@ -69,7 +69,7 @@ for sf objects, and `crs_wkt2()` for sf and sp objects for later system-level
 versions of the PROJ library. The `crs_input()` function will return what the data set's
 original coordinate system *was specified with* for new sf objects. 
 
-Beware of `crs_input()` it can return EPSG, WKT, PROJ4, or many other variants and aliaeses.
+Beware of `crs_input()` it can return EPSG, WKT, PROJ4, or many other variants and aliases.
 
 Now sp or sf objects, note this will give different results depending on the version/s of
 R and other software in use: 
